D'oh - forgot to update changelog before releasing.
I really should migrate my dists to dzil at some point.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for Dancer-Plugin-NYTProf
 
-0.01    Date/time
-        First version, released on an unsuspecting world.
+0.01    2011-07-23
+        Initial version.  Working, but plenty of room for improvement.
 
