--- a/README
+++ b/README
@@ -20,11 +20,31 @@ DESCRIPTION
     to make sure that user input cannot be used to nefarious effect. You are
     recommended to only use this in your development environment.
 
+CONFIGURATION
+    The plugin will work by default without any configuration required - it
+    will default to writing profiling data into a dir named `profdir' within
+    your Dancer application's `appdir', present profiling output at
+    `/nytprof' (not yet configurable), and profile all requests.
+
+    Below is an example of the options you can configure:
+
+        plugins:
+            NYTProf:
+                profdir: '/tmp/profiledata'
+                nytprofhtmlpath: '/usr/local/bin/nytprofhtml'
+
+    More configuration (such as the URL at which output is produced, and
+    options to control which requests get profiled) will be added in a
+    future version. (If there's something you'd like to see soon, do contact
+    me and let me know - it'll likely get done a lot quicker then!)
+
 AUTHOR
     David Precious, `<davidp at preshweb.co.uk>'
 
 ACKNOWLEDGEMENTS
     Stefan Hornburg (racke)
+
+    Neil Hooey (nhooey)
 
 BUGS
     Please report any bugs or feature requests at
