--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Dancer-Plugin-NYTProf
 
+0.30    2013-02-21
+        [ ENHANCEMENTS ]
+        * Show request execution time for each profiled request in list.
+          (May need to make this configurable; could be too slow if there are a
+          lot of profiled requests to list.)
+
 0.23    2012-09-24
         [ ENHANCEMENTS ]
         * Sort profile runs by most recent first (thanks to leejo)
