--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Dancer-Plugin-NYTProf
 
+0.31    2013-03-06
+        [ ENHANCEMENTS ]
+        * Use uri_for() when assembling links so it works if the app isn't at
+          the root (e.g. proxied / mounted) - (thanks to mopi)
+
 0.30    2013-02-21
         [ ENHANCEMENTS ]
         * Show request execution time for each profiled request in list.
